kubernetes/infrastructure/monitoring/kromgo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kromgo
  namespace: monitoring
  labels:
    app.kubernetes.io/name: kromgo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kromgo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kromgo
    spec:
      containers:
      - name: kromgo
        image: ghcr.io/kashalls/kromgo:v0.10.0
        ports:
        - name: http
          containerPort: 8080
        - name: health
          containerPort: 8888
        resources:
          requests:
            cpu: 15m
            memory: 64Mi
          limits:
            memory: 128Mi
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /kromgo/config.yaml
          subPath: config.yaml
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: kromgo
---
apiVersion: v1
kind: Service
metadata:
  name: kromgo
  namespace: monitoring
  labels:
    app.kubernetes.io/name: kromgo
spec:
  selector:
    app.kubernetes.io/name: kromgo
  ports:
  - name: http
    port: 80
    targetPort: http
